--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,9 @@
 		<title>Astro</title>
 	</head>
 	<body>
+		<a href="/">Home</a>
+		<a href="/about">about</a>
+		<a href="/blog/">Blog</a>
 		<h1>my astro site</h1>
 	</body>
 </html>
